docs/i18n/da/docusaurus-plugin-content-docs/version-1.3/shortcuts.md
---
title: "Genveje"
sidebar_position: 2
---

Der er et par genveje, som du kan bruge i editoren. Nogle af dem er skrevet under knapperne.

## Generelt

* `Ctrl` + `N`: Ny fil
* `Ctrl` + `Shift` + `N`: Ny fil fra skabelon
* `Ctrl` + `O`: Åbn fil
* `Ctrl` + `I`: Importer fil
* `Ctrl` + `E`: Eksporter fil
* `Ctrl` + `Shift` + `E`: Eksporter fil som billede
* `Ctrl` + `Alt` + `E`: Eksporter fil som svg
* `Ctrl` + `Alt` + `S`: Åbn indstillinger

## Projekt

* `Ctrl` + `Z`: Fortryd
* `Ctrl` + `Y`: Fortryd
* `Ctrl` + `Alt` + `N`: Open insert dialog
* `Ctrl` + `Alt` + `Shift` + `S`: Åbn projektindstillinger
* `Ctrl` + `Shift` + `P`: Open waypoints dialog
* `Ctrl` + `P`: Åbn farvepalet dialog
* `Ctrl` + `B`: Åbn baggrundsdialog
* `Ctrl` + `Shift` + `A`: Åbne områder dialog
* `Ctrl` + `L`: dialogen Åbn lag
* `Ctrl` + `S`: Gem
* `Alt` + `S`: Skift sti
